src/IFC-gen/csharp/antlr/ExpressParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from Express.g4 by ANTLR 4.7

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace Express {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7")]
[System.CLSCompliant(false)]
public partial class ExpressParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		BINARY_SIZED=10, BOOLEAN=11, INTEGER=12, LIST=13, LOGICAL=14, REAL=15, 
		SET=16, STRING_SIZED=17, FIXED=18, STRING=19, ARRAY=20, ABSTRACT=21, AND=22, 
		DERIVE=23, ENTITY=24, END_ENTITY=25, ENUMERATION=26, FOR=27, IN=28, INVERSE=29, 
		MOD=30, OF=31, ONEOF=32, OPTIONAL=33, OR=34, SCHEMA=35, END_SCHEMA=36, 
		SELECT=37, SELF=38, SUBTYPE=39, SUPERTYPE=40, TYPE=41, END_TYPE=42, UNIQUE=43, 
		WHERE=44, XOR=45, EXISTS=46, SIZEOF=47, QUERY=48, TYPEOF=49, ABS=50, USEDIN=51, 
		IfcType=52, Version=53, Integer=54, LP=55, RP=56, LB=57, RB=58, COLON=59, 
		PIPE=60, NOT=61, EQ=62, GT=63, LT=64, GTE=65, LTE=66, NEQ=67, MUL=68, 
		DIV=69, ADD=70, SUB=71, DEF=72, SAME=73, NOT_SAME=74, INIT=75, LAND=76, 
		LOR=77, Scientific=78, Float=79, Identifier=80, Rules=81, Functions=82, 
		WS=83, Comments=84;
	public const int
		RULE_schemaDeclaration = 0, RULE_typeDeclaration = 1, RULE_typeName = 2, 
		RULE_valueType = 3, RULE_collectionValueType = 4, RULE_collectionDeclaration = 5, 
		RULE_setParameters = 6, RULE_setSize = 7, RULE_enumeration = 8, RULE_select = 9, 
		RULE_idList = 10, RULE_typeDeclarationBody = 11, RULE_ruleDeclaration = 12, 
		RULE_rule = 13, RULE_expr = 14, RULE_atom = 15, RULE_boolExpr = 16, RULE_funcCallExpr = 17, 
		RULE_funcParameters = 18, RULE_queryExpr = 19, RULE_mulDivExpr = 20, RULE_addSubExpr = 21, 
		RULE_entityDeclaration = 22, RULE_entityDeclarationBody = 23, RULE_supertypeDeclaration = 24, 
		RULE_subtypeDeclaration = 25, RULE_attribute = 26, RULE_optional = 27, 
		RULE_definition = 28, RULE_oneOf = 29, RULE_inverseDeclaration = 30, RULE_inverseExpression = 31, 
		RULE_deriveDeclaration = 32, RULE_uniqueDeclaration = 33, RULE_uniqueStatement = 34, 
		RULE_functionDeclaration = 35, RULE_functionDeclarationBody = 36, RULE_path = 37, 
		RULE_propertyAccessor = 38, RULE_setAccessor = 39;
	public static readonly string[] ruleNames = {
		"schemaDeclaration", "typeDeclaration", "typeName", "valueType", "collectionValueType", 
		"collectionDeclaration", "setParameters", "setSize", "enumeration", "select", 
		"idList", "typeDeclarationBody", "ruleDeclaration", "rule", "expr", "atom", 
		"boolExpr", "funcCallExpr", "funcParameters", "queryExpr", "mulDivExpr", 
		"addSubExpr", "entityDeclaration", "entityDeclarationBody", "supertypeDeclaration", 
		"subtypeDeclaration", "attribute", "optional", "definition", "oneOf", 
		"inverseDeclaration", "inverseExpression", "deriveDeclaration", "uniqueDeclaration", 
		"uniqueStatement", "functionDeclaration", "functionDeclarationBody", "path", 
		"propertyAccessor", "setAccessor"
	};

	private static readonly string[] _LiteralNames = {
		null, "';'", "'['", "'?'", "']'", "','", "'FUNCTION'", "'END_FUNCTION'", 
		"'\\'", "'.'", null, "'BOOLEAN'", "'INTEGER'", "'LIST'", "'LOGICAL'", 
		"'REAL'", "'SET'", null, "'FIXED'", "'STRING'", "'ARRAY'", "'ABSTRACT'", 
		"'AND'", "'DERIVE'", "'ENTITY'", "'END_ENTITY'", "'ENUMERATION'", "'FOR'", 
		"'IN'", "'INVERSE'", "'MOD'", "'OF'", "'ONEOF'", "'OPTIONAL'", "'OR'", 
		"'SCHEMA'", "'END_SCHEMA'", "'SELECT'", "'SELF'", "'SUBTYPE'", "'SUPERTYPE'", 
		"'TYPE'", "'END_TYPE'", "'UNIQUE'", "'WHERE'", "'XOR'", "'EXISTS'", "'SIZEOF'", 
		"'QUERY'", "'TYPEOF'", "'ABS'", "'USEDIN'", null, null, null, "'('", "')'", 
		"'{'", "'}'", "':'", "'|'", "'NOT'", "'='", "'>'", "'<'", "'>='", "'<='", 
		"'<>'", "'*'", "'/'", "'+'", "'-'", "':='", "':=:'", "':<>:'", "'<*'", 
		"'&&'", "'||'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, "BINARY_SIZED", 
		"BOOLEAN", "INTEGER", "LIST", "LOGICAL", "REAL", "SET", "STRING_SIZED", 
		"FIXED", "STRING", "ARRAY", "ABSTRACT", "AND", "DERIVE", "ENTITY", "END_ENTITY", 
		"ENUMERATION", "FOR", "IN", "INVERSE", "MOD", "OF", "ONEOF", "OPTIONAL", 
		"OR", "SCHEMA", "END_SCHEMA", "SELECT", "SELF", "SUBTYPE", "SUPERTYPE", 
		"TYPE", "END_TYPE", "UNIQUE", "WHERE", "XOR", "EXISTS", "SIZEOF", "QUERY", 
		"TYPEOF", "ABS", "USEDIN", "IfcType", "Version", "Integer", "LP", "RP", 
		"LB", "RB", "COLON", "PIPE", "NOT", "EQ", "GT", "LT", "GTE", "LTE", "NEQ", 
		"MUL", "DIV", "ADD", "SUB", "DEF", "SAME", "NOT_SAME", "INIT", "LAND", 
		"LOR", "Scientific", "Float", "Identifier", "Rules", "Functions", "WS", 
		"Comments"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Express.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static ExpressParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public ExpressParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public ExpressParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}
	public partial class SchemaDeclarationContext : ParserRuleContext {
		public ITerminalNode SCHEMA() { return GetToken(ExpressParser.SCHEMA, 0); }
		public ITerminalNode Version() { return GetToken(ExpressParser.Version, 0); }
		public ITerminalNode END_SCHEMA() { return GetToken(ExpressParser.END_SCHEMA, 0); }
		public ITerminalNode Eof() { return GetToken(ExpressParser.Eof, 0); }
		public TypeDeclarationContext[] typeDeclaration() {
			return GetRuleContexts<TypeDeclarationContext>();
		}
		public TypeDeclarationContext typeDeclaration(int i) {
			return GetRuleContext<TypeDeclarationContext>(i);
		}
		public EntityDeclarationContext[] entityDeclaration() {
			return GetRuleContexts<EntityDeclarationContext>();
		}
		public EntityDeclarationContext entityDeclaration(int i) {
			return GetRuleContext<EntityDeclarationContext>(i);
		}
		public FunctionDeclarationContext[] functionDeclaration() {
			return GetRuleContexts<FunctionDeclarationContext>();
		}
		public FunctionDeclarationContext functionDeclaration(int i) {
			return GetRuleContext<FunctionDeclarationContext>(i);
		}
		public SchemaDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_schemaDeclaration; } }
		public override void EnterRule(IParseTreeListener listener) {
			IExpressListener typedListener = listener as IExpressListener;
			if (typedListener != null) typedListener.EnterSchemaDeclaration(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IExpressListener typedListener = listener as IExpressListener;
			if (typedListener != null) typedListener.ExitSchemaDeclaration(this);
		}
	}

	[RuleVersion(0)]
	public SchemaDeclarationContext schemaDeclaration() {
		SchemaDeclarationContext _localctx = new SchemaDeclarationContext(Context, State);
		EnterRule(_localctx, 0, RULE_schemaDeclaration);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 80; Match(SCHEMA);
			State = 81; Match(Version);
			State = 82; Match(T__0);
			State = 86;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==TYPE) {
				{
				{
				State = 83; typeDeclaration();
				}
				}
				State = 88;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 92;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==ENTITY) {
				{
				{
				State = 89; entityDeclaration();
				}
				}
				State = 94;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 98;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__5) {
				{
				{
				State = 95; functionDeclaration();
				}
				}
				State = 100;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 101; Match(END_SCHEMA);
			State = 102; Match(T__0);
			State = 103; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TypeDeclarationContext : ParserRuleContext {
		public ITerminalNode TYPE() { return GetToken(ExpressParser.TYPE, 0); }
		public ITerminalNode Identifier() { return GetToken(ExpressParser.Identifier, 0); }
		public ITerminalNode EQ() { return GetToken(ExpressParser.EQ, 0); }
		public ITerminalNode END_TYPE() { return GetToken(ExpressParser.END_TYPE, 0); }
		public ValueTypeContext valueType() {
			return GetRuleContext<ValueTypeContext>(0);
		}
		public EnumerationContext enumeration() {
			return GetRuleContext<EnumerationContext>(0);
		}
		public ITerminalNode FIXED() { return GetToken(ExpressParser.FIXED, 0); }
		public TypeDeclarationBodyContext typeDeclarationBody() {
			return GetRuleContext<TypeDeclarationBodyContext>(0);
		}
		public TypeDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_typeDeclaration; } }
		public override void EnterRule(IParseTreeListener listener) {
			IExpressListener typedListener = listener as IExpressListener;
			if (typedListener != null) typedListener.EnterTypeDeclaration(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IExpressListener typedListener = listener as IExpressListener;
			if (typedListener != null) typedListener.ExitTypeDeclaration(this);
		}
	}

	[RuleVersion(0)]
	public TypeDeclarationContext typeDeclaration() {
		TypeDeclarationContext _localctx = new TypeDeclarationContext(Context, State);
		EnterRule(_localctx, 2, RULE_typeDeclaration);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 105; Match(TYPE);
			State = 106; Match(Identifier);
			State = 107; Match(EQ);
			State = 111;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,3,Context) ) {
			case 1:
				{
				State = 108; valueType();
				}
				break;
			case 2:
				{
				State = 109; enumeration();
				}
				break;
			case 3:
				{
				}
				break;
			}
			State = 114;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==FIXED) {
				{
				State = 113; Match(FIXED);
				}
			}

			State = 116; Match(T__0);
			State = 118;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==WHERE) {
				{
				State = 117; typeDeclarationBody();
				}
			}

			State = 120; Match(END_TYPE);
			State = 121; Match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TypeNameContext : ParserRuleContext {
		public ITerminalNode Identifier() { return GetToken(ExpressParser.Identifier, 0); }
		public TypeNameContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_typeName; } }
		public override void EnterRule(IParseTreeListener listener) {
			IExpressListener typedListener = listener as IExpressListener;
			if (typedListener != null) typedListener.EnterTypeName(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IExpressListener typedListener = listener as IExpressListener;
			if (typedListener != null) typedListener.ExitTypeName(this);
		}
	}

	[RuleVersion(0)]
	public TypeNameContext typeName() {
		TypeNameContext _localctx = new TypeNameContext(Context, State);
		EnterRule(_localctx, 4, RULE_typeName);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 123; Match(Identifier);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ValueTypeContext : ParserRuleContext {
		public ITerminalNode BINARY_SIZED() { return GetToken(ExpressParser.BINARY_SIZED, 0); }
		public ITerminalNode BOOLEAN() { return GetToken(ExpressParser.BOOLEAN, 0); }
		public ITerminalNode INTEGER() { return GetToken(ExpressParser.INTEGER, 0); }
		public ITerminalNode LOGICAL() { return GetToken(ExpressParser.LOGICAL, 0); }
		public ITerminalNode REAL() { return GetToken(ExpressParser.REAL, 0); }
		public ITerminalNode STRING() { return GetToken(ExpressParser.STRING, 0); }
		public ITerminalNode STRING_SIZED() { return GetToken(ExpressParser.STRING_SIZED, 0); }
		public ITerminalNode Identifier() { return GetToken(ExpressParser.Identifier, 0); }
		public EnumerationContext enumeration() {
			return GetRuleContext<EnumerationContext>(0);
		}
		public SelectContext select() {
			return GetRuleContext<SelectContext>(0);
		}
		public CollectionDeclarationContext collectionDeclaration() {
			return GetRuleContext<CollectionDeclarationContext>(0);
		}
		public ValueTypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_valueType; } }
		public override void EnterRule(IParseTreeListener listener) {
			IExpressListener typedListener = listener as IExpressListener;
			if (typedListener != null) typedListener.EnterValueType(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IExpressListener typedListener = listener as IExpressListener;
			if (typedListener != null) typedListener.ExitValueType(this);
		}
	}

	[RuleVersion(0)]
	public ValueTypeContext valueType() {
		ValueTypeContext _localctx = new ValueTypeContext(Context, State);
		EnterRule(_localctx, 6, RULE_valueType);
		try {
			State = 136;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case BINARY_SIZED:
				EnterOuterAlt(_localctx, 1);
				{
				State = 125; Match(BINARY_SIZED);
				}
				break;
			case BOOLEAN:
				EnterOuterAlt(_localctx, 2);
				{
				State = 126; Match(BOOLEAN);
				}
				break;
			case INTEGER:
				EnterOuterAlt(_localctx, 3);
				{
				State = 127; Match(INTEGER);
				}
				break;
			case LOGICAL:
				EnterOuterAlt(_localctx, 4);
				{
				State = 128; Match(LOGICAL);
				}
				break;
			case REAL:
				EnterOuterAlt(_localctx, 5);
				{
				State = 129; Match(REAL);
				}
				break;
			case STRING:
				EnterOuterAlt(_localctx, 6);
				{
				State = 130; Match(STRING);
				}
				break;
			case STRING_SIZED:
				EnterOuterAlt(_localctx, 7);
				{
				State = 131; Match(STRING_SIZED);
				}
				break;
			case Identifier:
				EnterOuterAlt(_localctx, 8);
				{
				State = 132; Match(Identifier);
				}
				break;
			case ENUMERATION:
				EnterOuterAlt(_localctx, 9);
				{
				State = 133; enumeration();
				}
				break;
			case SELECT:
				EnterOuterAlt(_localctx, 10);
				{
				State = 134; select();
				}
				break;
			case LIST:
			case SET:
			case ARRAY:
				EnterOuterAlt(_localctx, 11);
				{
				State = 135; collectionDeclaration();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CollectionValueTypeContext : ParserRuleContext {
		public ITerminalNode BINARY_SIZED() { return GetToken(ExpressParser.BINARY_SIZED, 0); }
		public ITerminalNode BOOLEAN() { return GetToken(ExpressParser.BOOLEAN, 0); }
		public ITerminalNode INTEGER() { return GetToken(ExpressParser.INTEGER, 0); }
		public ITerminalNode LOGICAL() { return GetToken(ExpressParser.LOGICAL, 0); }
		public ITerminalNode REAL() { return GetToken(ExpressParser.REAL, 0); }
		public ITerminalNode STRING() { return GetToken(ExpressParser.STRING, 0); }
		public ITerminalNode STRING_SIZED() { return GetToken(ExpressParser.STRING_SIZED, 0); }
		public ITerminalNode Identifier() { return GetToken(ExpressParser.Identifier, 0); }
		public CollectionValueTypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_collectionValueType; } }
		public override void EnterRule(IParseTreeListener listener) {
			IExpressListener typedListener = listener as IExpressListener;
			if (typedListener != null) typedListener.EnterCollectionValueType(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IExpressListener typedListener = listener as IExpressListener;
			if (typedListener != null) typedListener.ExitCollectionValueType(this);
		}
	}

	[RuleVersion(0)]
	public CollectionValueTypeContext collectionValueType() {
		CollectionValueTypeContext _localctx = new CollectionValueTypeContext(Context, State);
		EnterRule(_localctx, 8, RULE_collectionValueType);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 138;
			_la = TokenStream.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BINARY_SIZED) | (1L << BOOLEAN) | (1L << INTEGER) | (1L << LOGICAL) | (1L << REAL) | (1L << STRING_SIZED) | (1L << STRING))) != 0) || _la==Identifier) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
